---
source: src/diagnostic.rs
expression: output
---
note: this is a test
  @ [just testing]
1 │ ┬   aaaaaaa
2 │ │ ┬ bbbbbbbbbbbbbb
3 │ │ ┼ ccc
  : │ ╰─ hi
4 │ │ ┬ dddddd
5 │ ┼ ┼ eeeeeeeeee
  : ╰─┼─ just testing two multilines
  :   ╰─ hello
